--- a/build.gradle
+++ b/build.gradle
@@ -16,15 +16,20 @@ repositories {
 dependencies {
     // https://mvnrepository.com/artifact/com.github.theholywaffle/teamspeak3-api
     implementation 'com.github.theholywaffle:teamspeak3-api:1.3.0'
+    "shadowLink"("com.github.theholywaffle:teamspeak3-api")
     // https://mvnrepository.com/artifact/com.alibaba/fastjson
     implementation 'com.alibaba:fastjson:2.0.15'
+    "shadowLink"("com.alibaba:fastjson")
     // https://mvnrepository.com/artifact/org.projectlombok/lombok
     compileOnly 'org.projectlombok:lombok:1.18.24'
+    "shadowLink"("org.projectlombok:lombok")
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
     // https://mvnrepository.com/artifact/org.yaml/snakeyaml
     implementation 'org.yaml:snakeyaml:1.33'
+    "shadowLink"("org.yaml:snakeyaml")
     // https://mvnrepository.com/artifact/cn.hutool/hutool-core
     implementation 'cn.hutool:hutool-core:5.8.8'
+    "shadowLink"("cn.hutool:hutool-core")
 
 
 }
