--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'cn.rapdog'
-version = '0.1.0'
+version = '0.1.1'
 
 repositories {
 //    maven { url 'https://maven.aliyun.com/repository/public' }
@@ -30,6 +30,9 @@ dependencies {
     // https://mvnrepository.com/artifact/cn.hutool/hutool-core
     implementation 'cn.hutool:hutool-core:5.8.8'
     "shadowLink"("cn.hutool:hutool-core")
+    // https://mvnrepository.com/artifact/org.springframework/spring-beans
+    implementation 'org.springframework:spring-beans:5.3.23'
+    "shadowLink"("org.springframework:spring-beans")
 
 
 }
